// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitClient（AC-D5/D6/D8/D15） > 快照：module 目标双产物（bindRequest 持有者 + 类型推导 + DEV 校验 + raw 通道） 1`] = `
"/* eslint-disable */
// 生成物：ojm api 从契约生成，勿手改（改动请改契约文件后重跑 ojm api）
import { ContractApiError } from "@oj-module/runtime/contract/errors";
import type { ScopedRequestLike } from "@oj-module/runtime/contract/errors";
import type { ModuleContext } from "@oj-module/runtime";
import type { z } from "@oj-module/runtime";
import type { schemas } from "./api.schemas";

/** oj 信封（AC-D16）：code=0 成功；非 0 时 HTTP status=code，由 toApiError 归一为 ContractApiError */
interface OjEnvelope<T> { code: number, msg?: string, data?: T }

let req: ScopedRequestLike | undefined;

/** 线上 API 前缀（ojm api 从契约抽取，唯一真源，勿手改）：请求基址 + 前缀登记用 */
export const API_PREFIX = "/order";

/** 认领身份前缀（契约 apiPrefix，字面等于模块目录名）：跨模块认领护栏对比基准 */
export const MODULE_PREFIX = "/order";

/**
 * 模块 entry 的 onInit 里一行创建（构造即 install）：完成 apiPrefix 登记 +
 * scoped request 绑定，返回绑好前缀的端点函数集合。一模块一 client；
 * 重复构造幂等安全（前缀重复登记同值、request 重绑同值）。
 */
export function createOrderClient(ctx: ModuleContext) {
	// 跨模块认领护栏（DEV）：工厂知道自己该属于谁（MODULE_PREFIX = 契约 apiPrefix），
	// ctx 又带 module.name——名实不符说明别的模块在替本模块创建 client，会共享 request
	// 单槽、卸载互相耦合；跨模块需求应由本模块创建后经 provider 暴露。
	// 注意对比基准是 MODULE_PREFIX（目录名）而非 API_PREFIX——D-M8 映射时线上前缀
	// 属于别的命名空间，认领身份仍按目录名。
	if (import.meta.env.DEV && ctx.module.name !== MODULE_PREFIX.slice(1)) {
		console.warn(\`[ojm-api] 模块 "\${ctx.module.name}" 正在认领 \${MODULE_PREFIX} 的 client——跨模块认领会共享 request 单槽、卸载互相耦合；应由 "\${MODULE_PREFIX.slice(1)}" 模块在自身 onInit 创建，跨模块需求经 provider 暴露。\`);
	}
	ctx.register.apiPrefix(API_PREFIX);
	bindRequest(ctx.utils.request);
	return { getOrderList, getOrderDetail, createOrder, updateOrder, downloadFile };
}

/**
 * @deprecated 请改用 createOrderClient(ctx)——工厂构造即完成
 * 前缀登记 + request 绑定，不会出现「登记了前缀没绑 request」的半接线状态。
 */
export function bindRequest(r: ScopedRequestLike): void {
	req = r;
}

function ensureReq(): ScopedRequestLike {
	if (!req)
		throw new ContractApiError(-1, "[ojm-api] 请求未绑定——请在模块 entry.ts 的 onInit 里调用 createOrderClient(ctx)（或 bindRequest(ctx.utils.request)）。");
	return req;
}

/** ky HTTPError → ContractApiError（错误体为信封时取 code/msg）；契约违例与原错误原样透传 */
async function toApiError(e: unknown): Promise<unknown> {
	if (e instanceof ContractApiError)
		return e;
	const res = (e as { response?: Response } | null)?.response;
	if (res instanceof Response) {
		try {
			const env = await res.clone().json() as { code?: number, msg?: string } | null;
			if (env && typeof env.code === "number")
				return new ContractApiError(env.code, env.msg ?? res.statusText);
		}
		catch { /* 非 JSON 错误体——回退原错误 */ }
	}
	return e;
}

export type GetOrderListQuery = z.input<(typeof schemas)["getOrderList"]["query"]>;
export type GetOrderListData = z.infer<(typeof schemas)["getOrderList"]["data"]>;

export async function getOrderList(query: GetOrderListQuery): Promise<GetOrderListData> {
	const client = ensureReq();
	try {
		const env = await client.get(\`order/list\`, { searchParams: query as Record<string, string | number | boolean> }).json<OjEnvelope<GetOrderListData>>();
		// 2xx + code!==0 也是业务错误（§6.2 通道 a）：oj 不会这么发，但契约机制的价值恰是防漂移
		if (typeof env.code === "number" && env.code !== 0)
			throw new ContractApiError(env.code, env.msg ?? "业务错误（信封 code 非 0）");
		const data = env.data as GetOrderListData;
		if (import.meta.env.DEV) {
			const { schemas } = await import("./api.schemas");
			const r = schemas.getOrderList.data.safeParse(data);
			if (!r.success)
				throw new ContractApiError(-1, \`[契约违例] getOrderList 响应与契约不符：\${r.error.issues.map(i => \`\${i.path.join(".") || "(root)"}: \${i.message}\`).join("; ")}\`);
		}
		return data;
	}
	catch (e) {
		throw await toApiError(e);
	}
}

export type GetOrderDetailParams = z.input<(typeof schemas)["getOrderDetail"]["params"]>;
export type GetOrderDetailData = z.infer<(typeof schemas)["getOrderDetail"]["data"]>;

export async function getOrderDetail(params: GetOrderDetailParams): Promise<GetOrderDetailData> {
	const client = ensureReq();
	try {
		const env = await client.get(\`order/item/\${encodeURIComponent(String(params.id))}\`).json<OjEnvelope<GetOrderDetailData>>();
		// 2xx + code!==0 也是业务错误（§6.2 通道 a）：oj 不会这么发，但契约机制的价值恰是防漂移
		if (typeof env.code === "number" && env.code !== 0)
			throw new ContractApiError(env.code, env.msg ?? "业务错误（信封 code 非 0）");
		const data = env.data as GetOrderDetailData;
		if (import.meta.env.DEV) {
			const { schemas } = await import("./api.schemas");
			const r = schemas.getOrderDetail.data.safeParse(data);
			if (!r.success)
				throw new ContractApiError(-1, \`[契约违例] getOrderDetail 响应与契约不符：\${r.error.issues.map(i => \`\${i.path.join(".") || "(root)"}: \${i.message}\`).join("; ")}\`);
		}
		return data;
	}
	catch (e) {
		throw await toApiError(e);
	}
}

export type CreateOrderBody = z.input<(typeof schemas)["createOrder"]["body"]>;
export type CreateOrderData = z.infer<(typeof schemas)["createOrder"]["data"]>;

export async function createOrder(body: CreateOrderBody): Promise<CreateOrderData> {
	const client = ensureReq();
	try {
		const env = await client.post(\`order/item\`, { json: body }).json<OjEnvelope<CreateOrderData>>();
		// 2xx + code!==0 也是业务错误（§6.2 通道 a）：oj 不会这么发，但契约机制的价值恰是防漂移
		if (typeof env.code === "number" && env.code !== 0)
			throw new ContractApiError(env.code, env.msg ?? "业务错误（信封 code 非 0）");
		const data = env.data as CreateOrderData;
		if (import.meta.env.DEV) {
			const { schemas } = await import("./api.schemas");
			const r = schemas.createOrder.data.safeParse(data);
			if (!r.success)
				throw new ContractApiError(-1, \`[契约违例] createOrder 响应与契约不符：\${r.error.issues.map(i => \`\${i.path.join(".") || "(root)"}: \${i.message}\`).join("; ")}\`);
		}
		return data;
	}
	catch (e) {
		throw await toApiError(e);
	}
}

export type UpdateOrderParams = z.input<(typeof schemas)["updateOrder"]["params"]>;
export type UpdateOrderBody = z.input<(typeof schemas)["updateOrder"]["body"]>;
export type UpdateOrderData = z.infer<(typeof schemas)["updateOrder"]["data"]>;

export async function updateOrder(input: { params: UpdateOrderParams, body: UpdateOrderBody }): Promise<UpdateOrderData> {
	const client = ensureReq();
	try {
		const env = await client.put(\`order/item/\${encodeURIComponent(String(input.params.id))}\`, { json: input.body }).json<OjEnvelope<UpdateOrderData>>();
		// 2xx + code!==0 也是业务错误（§6.2 通道 a）：oj 不会这么发，但契约机制的价值恰是防漂移
		if (typeof env.code === "number" && env.code !== 0)
			throw new ContractApiError(env.code, env.msg ?? "业务错误（信封 code 非 0）");
		const data = env.data as UpdateOrderData;
		if (import.meta.env.DEV) {
			const { schemas } = await import("./api.schemas");
			const r = schemas.updateOrder.data.safeParse(data);
			if (!r.success)
				throw new ContractApiError(-1, \`[契约违例] updateOrder 响应与契约不符：\${r.error.issues.map(i => \`\${i.path.join(".") || "(root)"}: \${i.message}\`).join("; ")}\`);
		}
		return data;
	}
	catch (e) {
		throw await toApiError(e);
	}
}

export type DownloadFileParams = { path: string };

export function downloadFile(params: DownloadFileParams): Promise<Response> {
	const client = ensureReq();
	return client.get(\`order/file/\${String(params.path).split("/").map(encodeURIComponent).join("/")}\`);
}
"
`;

exports[`emitClient（AC-D5/D6/D8/D15） > 快照：module 目标双产物（bindRequest 持有者 + 类型推导 + DEV 校验 + raw 通道） 2`] = `
"/* eslint-disable */
// 生成物：ojm api 从契约生成，勿手改（改动请改契约文件后重跑 ojm api）
// AC-D15：仅供 DEV 校验动态 import，生产构建不进产物
import { z } from "@oj-module/runtime";

export const schemas = {
	getOrderList: {
		query: z.object({
	page: z.number().int().min(1),
	size: z.number().int().optional(),
}),
		data: z.object({
	list: z.array(z.object({
		id: z.number(),
		order_no: z.string(),
	})),
	total: z.number(),
}),
	},
	getOrderDetail: {
		params: z.object({
	id: z.number(),
}),
		data: z.object({
	id: z.number(),
	order_no: z.string(),
}),
	},
	createOrder: {
		body: z.object({
	order_no: z.string().min(1),
}),
		data: z.object({
	id: z.number(),
}),
	},
	updateOrder: {
		params: z.object({
	id: z.number(),
}),
		body: z.object({
	order_no: z.string().optional(),
}),
		data: z.object({
	id: z.number(),
}),
	},
};
"
`;

exports[`emitClient：multipart/form-data（form 槽） > 快照：Form 类型 + FormData 组装函数 + body 走 FormData（无 json / 不设 content-type） 1`] = `
"/* eslint-disable */
// 生成物：ojm api 从契约生成，勿手改（改动请改契约文件后重跑 ojm api）
import { ContractApiError } from "@oj-module/runtime/contract/errors";
import type { ScopedRequestLike } from "@oj-module/runtime/contract/errors";
import type { ModuleContext } from "@oj-module/runtime";
import type { z } from "@oj-module/runtime";
import type { schemas } from "./api.schemas";

/** oj 信封（AC-D16）：code=0 成功；非 0 时 HTTP status=code，由 toApiError 归一为 ContractApiError */
interface OjEnvelope<T> { code: number, msg?: string, data?: T }

let req: ScopedRequestLike | undefined;

/** 线上 API 前缀（ojm api 从契约抽取，唯一真源，勿手改）：请求基址 + 前缀登记用 */
export const API_PREFIX = "/personal-center";

/** 认领身份前缀（契约 apiPrefix，字面等于模块目录名）：跨模块认领护栏对比基准 */
export const MODULE_PREFIX = "/personal-center";

/**
 * 模块 entry 的 onInit 里一行创建（构造即 install）：完成 apiPrefix 登记 +
 * scoped request 绑定，返回绑好前缀的端点函数集合。一模块一 client；
 * 重复构造幂等安全（前缀重复登记同值、request 重绑同值）。
 */
export function createPersonalCenterClient(ctx: ModuleContext) {
	// 跨模块认领护栏（DEV）：工厂知道自己该属于谁（MODULE_PREFIX = 契约 apiPrefix），
	// ctx 又带 module.name——名实不符说明别的模块在替本模块创建 client，会共享 request
	// 单槽、卸载互相耦合；跨模块需求应由本模块创建后经 provider 暴露。
	// 注意对比基准是 MODULE_PREFIX（目录名）而非 API_PREFIX——D-M8 映射时线上前缀
	// 属于别的命名空间，认领身份仍按目录名。
	if (import.meta.env.DEV && ctx.module.name !== MODULE_PREFIX.slice(1)) {
		console.warn(\`[ojm-api] 模块 "\${ctx.module.name}" 正在认领 \${MODULE_PREFIX} 的 client——跨模块认领会共享 request 单槽、卸载互相耦合；应由 "\${MODULE_PREFIX.slice(1)}" 模块在自身 onInit 创建，跨模块需求经 provider 暴露。\`);
	}
	ctx.register.apiPrefix(API_PREFIX);
	bindRequest(ctx.utils.request);
	return { uploadAvatar, uploadInFolder };
}

/**
 * @deprecated 请改用 createPersonalCenterClient(ctx)——工厂构造即完成
 * 前缀登记 + request 绑定，不会出现「登记了前缀没绑 request」的半接线状态。
 */
export function bindRequest(r: ScopedRequestLike): void {
	req = r;
}

function ensureReq(): ScopedRequestLike {
	if (!req)
		throw new ContractApiError(-1, "[ojm-api] 请求未绑定——请在模块 entry.ts 的 onInit 里调用 createPersonalCenterClient(ctx)（或 bindRequest(ctx.utils.request)）。");
	return req;
}

/** ky HTTPError → ContractApiError（错误体为信封时取 code/msg）；契约违例与原错误原样透传 */
async function toApiError(e: unknown): Promise<unknown> {
	if (e instanceof ContractApiError)
		return e;
	const res = (e as { response?: Response } | null)?.response;
	if (res instanceof Response) {
		try {
			const env = await res.clone().json() as { code?: number, msg?: string } | null;
			if (env && typeof env.code === "number")
				return new ContractApiError(env.code, env.msg ?? res.statusText);
		}
		catch { /* 非 JSON 错误体——回退原错误 */ }
	}
	return e;
}

export type UploadAvatarForm = {
	fields: z.input<(typeof schemas)["uploadAvatar"]["form"]>
	files: { avatar: File | Blob, gallery?: Array<File | Blob> }
};
export type UploadAvatarData = z.infer<(typeof schemas)["uploadAvatar"]["data"]>;

function buildUploadAvatarForm(input: UploadAvatarForm): FormData {
	const fd = new FormData();
	if (input.fields.kind !== undefined) {
		const v = input.fields.kind;
		fd.append("kind", v !== null && typeof v === "object" ? JSON.stringify(v) : String(v));
	}
	if (input.fields.note !== undefined) {
		const v = input.fields.note;
		fd.append("note", v !== null && typeof v === "object" ? JSON.stringify(v) : String(v));
	}
	fd.append("avatar", input.files.avatar);
	for (const file of input.files.gallery ?? [])
		fd.append("gallery", file);
	return fd;
}

export async function uploadAvatar(form: UploadAvatarForm): Promise<UploadAvatarData> {
	const client = ensureReq();
	try {
		const env = await client.post(\`personal-center/upload\`, { body: buildUploadAvatarForm(form) }).json<OjEnvelope<UploadAvatarData>>();
		// 2xx + code!==0 也是业务错误（§6.2 通道 a）：oj 不会这么发，但契约机制的价值恰是防漂移
		if (typeof env.code === "number" && env.code !== 0)
			throw new ContractApiError(env.code, env.msg ?? "业务错误（信封 code 非 0）");
		const data = env.data as UploadAvatarData;
		if (import.meta.env.DEV) {
			const { schemas } = await import("./api.schemas");
			const r = schemas.uploadAvatar.data.safeParse(data);
			if (!r.success)
				throw new ContractApiError(-1, \`[契约违例] uploadAvatar 响应与契约不符：\${r.error.issues.map(i => \`\${i.path.join(".") || "(root)"}: \${i.message}\`).join("; ")}\`);
		}
		return data;
	}
	catch (e) {
		throw await toApiError(e);
	}
}

export type UploadInFolderParams = z.input<(typeof schemas)["uploadInFolder"]["params"]>;
export type UploadInFolderForm = {
	files: { file: File | Blob }
};
export type UploadInFolderData = z.infer<(typeof schemas)["uploadInFolder"]["data"]>;

function buildUploadInFolderForm(input: UploadInFolderForm): FormData {
	const fd = new FormData();
	fd.append("file", input.files.file);
	return fd;
}

export async function uploadInFolder(input: { params: UploadInFolderParams, form: UploadInFolderForm }): Promise<UploadInFolderData> {
	const client = ensureReq();
	try {
		const env = await client.put(\`personal-center/folder/\${encodeURIComponent(String(input.params.id))}/upload\`, { body: buildUploadInFolderForm(input.form) }).json<OjEnvelope<UploadInFolderData>>();
		// 2xx + code!==0 也是业务错误（§6.2 通道 a）：oj 不会这么发，但契约机制的价值恰是防漂移
		if (typeof env.code === "number" && env.code !== 0)
			throw new ContractApiError(env.code, env.msg ?? "业务错误（信封 code 非 0）");
		const data = env.data as UploadInFolderData;
		if (import.meta.env.DEV) {
			const { schemas } = await import("./api.schemas");
			const r = schemas.uploadInFolder.data.safeParse(data);
			if (!r.success)
				throw new ContractApiError(-1, \`[契约违例] uploadInFolder 响应与契约不符：\${r.error.issues.map(i => \`\${i.path.join(".") || "(root)"}: \${i.message}\`).join("; ")}\`);
		}
		return data;
	}
	catch (e) {
		throw await toApiError(e);
	}
}
"
`;

exports[`emitClient：multipart/form-data（form 槽） > 快照：Form 类型 + FormData 组装函数 + body 走 FormData（无 json / 不设 content-type） 2`] = `
"/* eslint-disable */
// 生成物：ojm api 从契约生成，勿手改（改动请改契约文件后重跑 ojm api）
// AC-D15：仅供 DEV 校验动态 import，生产构建不进产物
import { z } from "@oj-module/runtime";

export const schemas = {
	uploadAvatar: {
		form: z.object({
	kind: z.enum(["photo","doc"]),
	note: z.string().optional(),
}),
		data: z.string(),
	},
	uploadInFolder: {
		params: z.object({
	id: z.number(),
}),
		data: z.string(),
	},
};
"
`;
